--- a/_includes/home.liquid
+++ b/_includes/home.liquid
@@ -7,11 +7,10 @@ title: Lynn Hogen-Esch
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lynn Hogen-Esch - {{ title }}</title>
+  <title>Lynn Hogen-Esch</title>
   <link rel="stylesheet" href="/styles/screen.css">
 </head>
-<body>
-  {% include 'nav' %}
+<body class="home">
     {{ content }}
 </body>
 </html>
