--- a/styles/screen.css
+++ b/styles/screen.css
@@ -1,20 +1,26 @@
 body {
-    font-family: Helvetica, sans-serif;
-    color: #EAE8FF;
-    background: #2D3142;
-    padding: 0 40px;
-    text-align: center;
+    font-family:'Times New Roman', Times, serif;
+    color: #fce8ff;
+    background: #3d283f;
 }
 
 nav {
-    margin: 40px auto 0 auto;
-    width: 250px;
-    border-radius: 50px;
-    background: #212431;
+    margin: 0;
+    width: 100%;
+    height: 75px;
+    background: #784D80;
+    position: sticky;
+    text-align: center;
+}
+
+nav img{
+    float:left;
+    margin:10px;
 }
 
 nav ul {
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
     margin: 0;
     padding: 0;
@@ -28,23 +34,66 @@ nav ul li {
 nav ul li a {
     display: inline-block;
     padding: 20px;
-    color: #EAE8FF;
+    color: #ffe8fe;
     text-decoration: none;
     font-size: 1.2em;
 }
 
 h1 {
-    font-size: 8em;
-    letter-spacing: -2px;
+    font-size: 3em;
 }
 
-h1 strong {
-    background: rgb(34,193,195);
-    background: linear-gradient(45deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+h1 em {
+    text-decoration: underline dashed purple;
 }
 
-img.about {
-    opacity: 0.5;
+
+div.home{
+    text-align: center;
+    position:relative;
+    width:fit-content;
+    margin:auto auto ;
+}
+div.home img{
+    width:100%;
+}
+div.home a{
+    position:absolute;
+    text-align:center;
+    left: 0;
+    width: 100%;
+
+}
+div.home a.homePort{
+    bottom: 45%;
+}
+div.home a.homeAbt{
+    bottom: 7%;
+}
+
+body.home{
+    background-color: #784D80;
+}
+
+a{
+    color:#D69FDF;
+}
+nav ul li strong a{
+    color:#E18FEF;
+}
+div.footer{
+    position:absolute;
+    bottom: 0;
+}
+div.gameContainer{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap:2em;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+}
+div.Game img{
+    width:100%;
+    height: auto;
 }
