--- a/portfolio.liquid
+++ b/portfolio.liquid
@@ -34,5 +34,9 @@ title: Lynn Hogen-Esch - Portfolio
         {% endif %}
     {% endfor %}
 </div>
+<div class="footer">
+    <p class="leftfoot"><a href="mailto:lynnhogeneschgamedev@gmail.com">lynnhogeneschgamedev@gmail.com</a></p>
+    <p class="rightfoot"><a href="https://lynnhe.itch.io/">lynnhe.itch.io</a></p>
+</div>
 </body>
 </html>
