--- a/styles/screen.css
+++ b/styles/screen.css
@@ -2,10 +2,14 @@ body {
     font-family:'Times New Roman', Times, serif;
     color: #fce8ff;
     background: #3d283f;
+    margin:0px;
 }
 
+a{
+    color:#D69FDF;
+}
 nav {
-    margin: 0;
+    margin: 0px;
     width: 100%;
     height: 75px;
     background: #784D80;
@@ -27,13 +31,13 @@ nav ul {
 }
 
 nav ul li {
-    list-style-type: none;
+    list-style-type:none;
     margin: 0;
 }
 
 nav ul li a {
     display: inline-block;
-    padding: 20px;
+    padding: 25px;
     color: #ffe8fe;
     text-decoration: none;
     font-size: 1.2em;
@@ -73,17 +77,19 @@ div.home a.homeAbt{
 
 body.home{
     background-color: #784D80;
+    margin:1em;
 }
 
-a{
-    color:#D69FDF;
-}
 nav ul li strong a{
     color:#E18FEF;
 }
+
 div.footer{
-    position:absolute;
+    position:sticky;
     bottom: 0;
+    display:flex;
+    justify-content: space-between;
+    background-color: #784D80;
 }
 div.gameContainer{
     display:grid;
