--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -11,7 +11,8 @@ title: Lynn Hogen-Esch
   <link rel="stylesheet" href="/styles/screen.css">
 </head>
 <body>
-  {% include 'nav' %}
+    {% include 'nav' %}
     {{ content }}
+    {% include 'footer' %}
 </body>
 </html>
