--- a/details.liquid
+++ b/details.liquid
@@ -30,5 +30,6 @@ permalink: "portfolio/{{ game.name | slugify }}/"
       <p>{{ game.HighlightDescription }}</p>
       <img src="{{ game.HighlightImage }}" alt="{{game.name}} highlight image" width="50%">
     </div>
+    {% include 'footer' %}
 </body>
 </html>
