--- a/portfolio.liquid
+++ b/portfolio.liquid
@@ -24,6 +24,7 @@ title: Lynn Hogen-Esch - Portfolio
     </div>
     <h1>~~In Development~~</h1>
     <div class="gameContainer">
+        <div></div>
     {% for game in games %}
         {% if game.Indev == true %}
             <div class="Game">
@@ -33,10 +34,8 @@ title: Lynn Hogen-Esch - Portfolio
             </div>
         {% endif %}
     {% endfor %}
-</div>
-<div class="footer">
-    <p class="leftfoot"><a href="mailto:lynnhogeneschgamedev@gmail.com">lynnhogeneschgamedev@gmail.com</a></p>
-    <p class="rightfoot"><a href="https://lynnhe.itch.io/">lynnhe.itch.io</a></p>
-</div>
+        <div></div>
+    </div>
+    {% include 'footer' %}
 </body>
 </html>
