--- a/_includes/nav.liquid
+++ b/_includes/nav.liquid
@@ -1,5 +1,5 @@
 <nav>
-    <img src="/images/LynnHogenEschLogo.png" width="55px" height="55px">
+    <a href="/"><img src="/images/LynnHogenEschLogo.png" width="55px"></a>
     <ul>
     {% for link in navigation %}
       <li>
