--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -11,8 +11,12 @@ title: Lynn Hogen-Esch
   <link rel="stylesheet" href="/styles/screen.css">
 </head>
 <body>
+  <div class="wrapper">
     {% include 'nav' %}
+    <main>
     {{ content }}
+    </main>
     {% include 'footer' %}
+  </div>
 </body>
 </html>
