--- a/styles/screen.css
+++ b/styles/screen.css
@@ -1,8 +1,22 @@
+* {
+  box-sizing: inherit;
+}
+
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
 body {
     font-family:'Times New Roman', Times, serif;
-    color: #fce8ff;
+    color: #EFD9F2;
     background: #45194C;
     margin:0px;
+    height: 100%;
+}
+.wrapper {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 a{
@@ -20,6 +34,7 @@ nav {
 nav img{
     float:left;
     margin:10px;
+    width:55px;
 }
 
 nav ul {
@@ -38,7 +53,7 @@ nav ul li {
 nav ul li a {
     display: inline-block;
     padding: 25px;
-    color: #ffe8fe;
+    color: #D69FDF;
     text-decoration: none;
     font-size: 1.2em;
 }
@@ -46,10 +61,6 @@ nav ul li a {
 h1 {
     font-size: 3em;
     text-align: center;
-}
-
-h1 em {
-    text-decoration: underline dashed purple;
 }
 
 
@@ -88,9 +99,10 @@ div.gameContainer{
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap:1em;
+    margin:1em;
     align-items: start;
     justify-content: center;
-    width:100%;
+    width:100%-2em;
 }
 div.Game img{
     width:100%;
@@ -122,16 +134,77 @@ div.profile h4{
     margin:0;
     text-align:center;
 }
-
+body.gameDetails h2{
+    margin:0;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    font-size: 3em;
+    text-align: center;
+    width:100%;
+}
+div.summary{
+    margin:1em;
+    display:grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    padding:1em;
+    gap: 1em;
+    width:100%-2em;
+    background-color: #5d3c63;
+}
+div.summary img{
+    width:100%;
+}
+div.summary ul{
+    width:100%-1em;
+    height: 100%;
+    align-content: center;
+    background-color: #4a304f;
+    padding:0 2em;
+}
+div.summary li{
+    width:100%;
+}
+body.gameDetails h3{
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    font-size:2em;
+    text-align: center;
+    width:100%;
+}
+div.details{
+    margin:1em;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    padding:1em;
+    gap: 1em;
+    width:100%-2em;
+    background-color: #5d3c63;
+}
+div.details img{
+    width:100%
+}
+div.details p{
+    width:100%-1em;
+    height: 100%;
+    align-content: center;
+    background-color: #4a304f;
+    text-align: center;
+    padding:0 1em;
+}
 div.footer{
     position:sticky;
     bottom: 0;
-    top:100vw;
-    width:100%;
+    width:100%-2em;
     display:flex;
     justify-content: space-between;
     background-color: #784D80;
+    padding:0 1em;
+    z-index: 1000;
 }
+
+
 @media screen and (max-width: 600px) {
     div.gameContainer{
     grid-template-columns: 1fr;
